# stapel-video

./: .gitignore  CHANGELOG.md  CONFIG.MD  LICENSE  MODULE.md  Makefile  README.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codecov.yml  codegen_urls.py  conf.py  conftest.py  consumers.py  dto.py  errors.py  gdpr.py  models.py  pyproject.toml  realtime.py  routing.py  scope.py  serializers.py  services.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.json  schema.json
migrations/: 0001_initial.py
providers/: __init__.py  base.py  livekit.py
schemas/consumes/: user.deleted.json
schemas/emits/: video.egress_ended.json
tests/: fakeprovider.py  fakescope.py  test_checks.py  test_consumer.py  test_contract.py  test_gdpr.py  test_livekit_provider.py  test_lobby.py  test_pagination.py  test_rooms.py  test_webhook.py  urls.py
