[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-video"
version = "0.1.1"
description = "Video calls (rooms, lobby admission, recording-egress seam) for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "video", "livekit", "webrtc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.11",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-video"
Repository = "https://github.com/usestapel/stapel-video"
Documentation = "https://github.com/usestapel/stapel-video#readme"
Changelog = "https://github.com/usestapel/stapel-video/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-video/issues"

[project.optional-dependencies]
# LiveKit backend for the VideoProvider seam. The default provider dotted
# path (stapel_video.providers.livekit.LiveKitProvider) imports fine without
# this — the SDK is imported lazily inside the methods that call it, so a host
# that swaps VIDEO_PROVIDER for its own backend never needs it.
livekit = ["livekit-api>=0.7,<1", "requests>=2.28,<3"]
# Realtime lobby (waiting/admitted/denied) over WebSockets. Mirrors
# stapel-core's own `channels` extra — HTTP-only hosts pay nothing.
channels = ["stapel-core[channels]"]
all = ["livekit-api>=0.7,<1", "requests>=2.28,<3", "stapel-core[channels]"]

[tool.setuptools]
package-dir = {"stapel_video" = "."}
packages = [
    "stapel_video",
    "stapel_video.migrations",
    "stapel_video.providers",
]

[tool.setuptools.package-data]
stapel_video = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
